--- a/features/game/src/main/res/layout/activity_game.xml
+++ b/features/game/src/main/res/layout/activity_game.xml
@@ -20,6 +20,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+            <TextView
+                android:id="@+id/info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nova_oval"
+                android:gravity="center"
+                android:translationZ="1dp"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorAccent"
+                android:text=""
+                android:textSize="78sp"
+                android:visibility="invisible"
+                android:translationY="100dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:text="Zgaduj"
+                tools:visibility="visible"/>
 
             <TextView
                 android:id="@+id/game_code"
@@ -36,15 +54,15 @@
 
             <TextView
                 android:id="@+id/word"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nova_flat"
-                android:gravity="center"
+                android:textAlignment="center"
                 android:background="@android:color/transparent"
                 android:textColor="@color/colorPrimaryDark"
                 android:text=""
                 android:textSize="32sp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -58,15 +76,16 @@
                 android:elevation="2dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="6dp"
+                android:visibility="invisible"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:visibility="visible">
 
                 <ImageButton
                     android:id="@+id/color_button"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:foregroundGravity="center"
-                    android:visibility="invisible"
                     android:background="@drawable/ic_green_circle"
                     android:src="@drawable/ic_baseline_color_lens"
                     android:onClick="@{() -> viewModel.changeBrushColor()}"
@@ -74,8 +93,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    tools:visibility="visible"/>
+                    app:layout_constraintBottom_toBottomOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -84,17 +102,18 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:elevation="2dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="130dp"
                 android:layout_marginEnd="6dp"
-                app:layout_constraintTop_toBottomOf="@id/brush_tools"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
 
                 <ImageButton
                     android:id="@+id/clear_button"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:foregroundGravity="center"
-                    android:visibility="invisible"
                     android:background="@drawable/ic_green_circle"
                     android:src="@drawable/ic_baseline_delete"
                     android:onClick="@{() -> viewModel.clearImage()}"
@@ -102,8 +121,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    tools:visibility="visible"/>
+                    app:layout_constraintBottom_toBottomOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <pl.sose1.ui.painting.PaintingView
@@ -162,6 +180,8 @@
                     android:textSize="18sp"
                     android:layout_margin="6dp"
                     android:text="@={viewModel.messageContent}"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
