--- a/features/game/src/main/res/values/colors.xml
+++ b/features/game/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#4e53c1</color>
+    <color name="colorPrimaryDark">#012a90</color>
+    <color name="colorPrimaryLight">#837ff4</color>
+    <color name="colorSecondary">#1fc1d8</color>
+    <color name="colorSecondaryLight">#6bf4ff</color>
+    <color name="colorSecondaryDark">#0090a7</color>
+    <color name="colorAccent">#04D100</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="red">#FF0000</color>
 </resources>
