--- a/features/home/src/main/res/xml/activity_splash_scene.xml
+++ b/features/home/src/main/res/xml/activity_splash_scene.xml
@@ -4,8 +4,8 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
+        motion:constraintSetEnd="@+id/info_end"
+        motion:constraintSetStart="@id/info_start"
         motion:autoTransition="animateToEnd"
         motion:duration="5000">
        <KeyFrameSet>
@@ -199,14 +199,14 @@
        </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/info_start">
         <Constraint
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="731dp"
             android:id="@+id/imageView" />
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/info_end">
         <Constraint
             android:id="@+id/ludek"
             motion:layout_constraintEnd_toEndOf="parent"
